# PaperDigestAction

./: .gitignore  README.md  arch.md  config.toml  keywords.json  main.py  predictions.parquet  pyproject.toml  summary_example.json
.github/workflows/: recommend.yml  summarize.yml
.roo/rules/: rules.md
preference/: 2025-04.csv  2025-05.csv
script/: clear_personal_data.py  generate_preference.py  initialize_summarized_data.py  recommend.py  summarize.py
src/: archiver.py  augment.py  config.py  dataloader.py  json2md.py  sampler.py  summarize.py  trainer.py
summarized/: 2210.jsonl  2303.jsonl  2308.jsonl  2310.jsonl  2312.jsonl  2401.jsonl  2402.jsonl  2403.jsonl  2404.jsonl  2405.jsonl  2406.jsonl  2407.jsonl  2408.jsonl  2409.jsonl  2410.jsonl  2411.jsonl  2412.jsonl  2501.jsonl  2502.jsonl  2503.jsonl  2504.jsonl  2505.jsonl  2506.jsonl
test/: test_archiver.py  test_dataloader.py  test_summarize.py
test/data/: summarized.parquet  zotero.csv
