[project]
name = "paperdigestaction"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=3.6.0",
    "imblearn>=0.0",
    "loguru>=0.7.3",
    "polars>=1.29.0",
    "scikit-learn>=1.6.1",
    "pydantic>=2.11.4",
    "toml>=0.10.2",
    "huggingface-hub[hf-xet]>=0.31.1",
    "hf-xet>=1.1.0",
    "latex2json",
    "openai>=1.78.1",
    "tiktoken>=0.9.0",
    "httpx[socks]>=0.28.1",
    "timeout-decorator>=0.5.0",
    "markitdown>=0.1.1",
    "ipykernel>=6.29.5",
    "filelock>=3.18.0",
    "pytest-mock>=3.14.1",
]

[tool.uv.sources]
latex2json = { git = "https://github.com/mrlooi/latex2json.git" }

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]
